fixtures/cs-hash-01/bad/js-sha1-package-import.js
import sha1 from "js-sha1";

export function hashPassword(password) {
	return sha1(password);
}
